--- a/calculations/pom.xml
+++ b/calculations/pom.xml
@@ -7,6 +7,14 @@
     <groupId>org.mk</groupId>
     <artifactId>calculations</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+           <groupId>com.google.code.gson</groupId>
+           <artifactId>gson</artifactId>
+           <version>2.8.8</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
