--- a/calculations/pom.xml
+++ b/calculations/pom.xml
@@ -14,6 +14,12 @@
            <artifactId>gson</artifactId>
            <version>2.8.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
